[package]
name = "web-lernen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = {version="0.7.1",features = ["cookie-session"]}
actix-auth = "0.1.0"
actix-files = "0.6.2"
actix-utils = "3.0.0"

log = "0.4.17"
env_logger = "0.9.0"
